@@ -1,0 +1,1 @@
+<?xml version="1.0" encoding="UTF-8"?><sbml xmlns="http://www.sbml.org/sbml/level2/version4" level="2" version="4"> <model>  <listOfCompartments>     <compartment id="C"/>  </listOfCompartments>  <listOfSpecies>     <species id="S1" compartment="C"/>  </listOfSpecies>  <listOfParameters>     <parameter id="p1"/>  </listOfParameters>  <listOfInitialAssignments>    <initialAssignment symbol="C">        <math xmlns="http://www.w3.org/1998/Math/MathML">           <apply>              <times/>              <ci>p1</ci>              <ci>S1</ci>           </apply>        </math>    </initialAssignment>  </listOfInitialAssignments> </model></sbml>
